[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/normalfinance/normal-v1-stellar-contracts"

[workspace.dependencies]
soroban-sdk = "22.0.4"
soroban-token-sdk = "22.0.4"
normal = { path = "./packages/normal" }
num-integer = { version = "0.1.45", default-features = false, features = [
    "i128",
] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
