[package]
name = "normal-scheduler"
version = { workspace = true }
authors = ["jblewnormal <joshua@normalfinance.io>"]
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-decimal = { workspace = true }
normal = { workspace = true }
soroban-sdk = { workspace = true }
itoa = { version = "1.0", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
pretty_assertions = { workspace = true }
