[package]
name = "votes"
version = "0.1.0"
authors = [
    "Script3 Ltd. <gm@script3.io>",
    "Joshua Blew <joshua@normalfinance.io>",
]
license = "MIT"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]
sep-0041 = []


[dependencies]
soroban-sdk = { workspace = true }
sep-41-token = { workspace = true }
soroban-fixed-point-math = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
